[gd_scene load_steps=11 format=3 uid="uid://ckokuu85fua3"]

[ext_resource type="Script" uid="uid://ckohy5300ciba" path="res://addons/asset_placer/ui/settings/settings_panel.gd" id="1_cqn4c"]
[ext_resource type="PackedScene" uid="uid://bjgh4jo3pc65i" path="res://addons/asset_placer/ui/settings/components/keybinding_option.tscn" id="1_gi0tg"]
[ext_resource type="Script" uid="uid://dmicn3kmr620j" path="res://addons/asset_placer/utils/system_icon.gd" id="1_si2q2"]
[ext_resource type="Script" uid="uid://c4ms6t1dhy278" path="res://addons/asset_placer/ui/settings/components/keybinding_group.gd" id="3_l6bix"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqn4c"]

[sub_resource type="Texture2D" id="Texture2D_l6bix"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_si2q2")
icon_name = &"Reload"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_a1e85"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_si2q2")
icon_name = &"Tools"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_y61cc"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_si2q2")
icon_name = &"Close"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_altf5"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_si2q2")
icon_name = &"Info"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_cqn4c"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_si2q2")
icon_name = &"KeyboardPhysical"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[node name="SettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cqn4c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_cqn4c")
text = "Reset To Defaults"
icon = SubResource("Texture2D_l6bix")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="General" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer2"]
layout_mode = 2
texture = SubResource("Texture2D_a1e85")
stretch_mode = 5

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer2"]
layout_mode = 2
text = "Settings"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer3"]
layout_mode = 2
text = "Transform Step (Scale, Translate)"

[node name="TrasformStepSpinBox" type="SpinBox" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
step = 0.01
value = 0.1

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer4"]
layout_mode = 2
text = "Rotation Step (Degrees)"

[node name="RotationStepSpinBox" type="SpinBox" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
max_value = 360.0
value = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer"]
layout_mode = 2
text = "Preview Material Resource"

[node name="MaterialPickerButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "preview_material.tres"
alignment = 2
autowrap_trim_flags = 0
icon_alignment = 2

[node name="MaterialClearButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("Texture2D_y61cc")

[node name="PlaneMaterialOption" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/PlaneMaterialOption"]
layout_mode = 2
text = "Plane Mode Material Resource"

[node name="PlaneMaterialPickerButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/PlaneMaterialOption"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "plane_preview_material.tres"
alignment = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer5"]
layout_mode = 2
text = "Thumbnails UI Scale"

[node name="SliderValue" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0.8"
horizontal_alignment = 2

[node name="UIScaleHSlider" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.2
max_value = 2.0
step = 0.1
value = 0.8
ticks_position = 3

[node name="Spacing" type="Control" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="UpdateChannelContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/UpdateChannelContainer"]
layout_mode = 2
text = "Plugin Update Channel"

[node name="UpdateChannelInfoButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/UpdateChannelContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("Texture2D_altf5")
flat = true

[node name="UpdateChannelOptionButton" type="OptionButton" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/General/UpdateChannelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
alignment = 2
selected = 0
item_count = 3
popup/item_0/text = "Stable"
popup/item_0/id = 0
popup/item_1/text = "Beta"
popup/item_1/id = 1
popup/item_2/text = "Alpha"
popup/item_2/id = 2

[node name="KeyBindings" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/HBoxContainer"]
layout_mode = 2
texture = SubResource("Texture2D_cqn4c")
stretch_mode = 5

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/HBoxContainer"]
layout_mode = 2
text = "Key Bindings"

[node name="KeyBindingsOptions" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings"]
layout_mode = 2
script = ExtResource("3_l6bix")

[node name="KeybindingOptionRotate" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Rotate Asset"

[node name="KeybindingOptionScale" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Scale Asset"

[node name="KeybindingOptionTranslate" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Translate Asset / Plane Placement"

[node name="KeybindingOptionGridSnap" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Grid Snapping "

[node name="KeybindingOptionPlaneMode" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Toggle Plane Mode"

[node name="KeybindingOptionInPlaceTransform" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
allow_mouse_buttons = true
label = "In-Place Transform Mode "

[node name="KeybindingOptionPositiveTransform" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Apply Positive Transform "

[node name="KeybindingOptionNegativeTransform" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Apply Negative Transform "

[node name="KeybindingOptionAxisX" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Toggle X Axis"

[node name="KeybindingOptionAxisY" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Toggle Y Axis"

[node name="KeybindingOptionAxisZ" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/KeyBindings/KeyBindingsOptions" instance=ExtResource("1_gi0tg")]
unique_name_in_owner = true
layout_mode = 2
label = "Toggle Z Axis"
